--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -54,10 +54,10 @@
 \end{center}
 \end{titlepage}
 
-\thispagestyle{empty}
-
-
+%\thispagestyle{empty}
+\begin{center}
 \chapter*{Abstract}
+\end{center}
 \chapter*{Preface}
 \chapter*{Acknowledgements}
 
