folders to each chapter

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -55,28 +55,25 @@
 \end{titlepage}
 
 %\thispagestyle{empty}
-\begin{center}
+
 \chapter*{Abstract}
-\end{center}
 \chapter*{Preface}
 \chapter*{Acknowledgements}
-
 
 \tableofcontents
 
 \chapter{Introduction}
-\input{chapters/introduction}
+\input{chapters/introduction/introduction}
 \chapter{Related Work}
-\input{chapters/relatedwork}
+\input{chapters/relatedwork/relatedwork}
 \chapter{The Model}
-\input{chapters/model}
+\input{chapters/model/model}
 \chapter{Results}
-\input{chapters/results}
+\input{chapters/results/results}
 \chapter{Analysis}
-\input{chapters/analysis}
+\input{chapters/analysis/analysis}
 \chapter{Discussion}
-\input{chapters/discussion}
-
+\input{chapters/discussion/discussion}
 
 
 \cleardoublepage
