--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -16,10 +16,10 @@
 
 % Author
 % Fill in here, and use commands in the text. 
-\newcommand{\thesisAuthor}{Author Authorsen}
-\newcommand{\thesisTitle}{The best title in the world}
-\newcommand{\thesisType}{master project}
-\newcommand{\thesisDate}{spring 2014}
+\newcommand{\thesisAuthor}{Hanne Gunby and Susanne Gustavsen}
+\newcommand{\thesisTitle}{Optimizing bus routes using AI-methods}
+\newcommand{\thesisType}{Masters Thesis}
+\newcommand{\thesisDate}{Spring 2014}
 
 %Fancy headings
 %\pagestyle{fancy}
