explains what each section should contain

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -1,7 +1,7 @@
 % (C) Anders Kofod-Petersen
 \documentclass[a4paper]{book}
 \usepackage[english]{babel}						% Correct English hyphenation
-\usepackage[latin1]{inputenc}						% Allow for non-English letters
+\usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
 \usepackage{natbib}								% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
