--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -57,10 +57,10 @@
 %\thispagestyle{empty}
 
 \chapter*{Abstract}
-\chapter*{Preface}
 \chapter*{Acknowledgements}
 
-\tableofcontents
+%content
+  \tableofcontents
 
 \chapter{Introduction}
 \input{chapters/introduction/introduction}
