--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -11,7 +11,8 @@
 
 \begin{document}
 
-\section{Search Engines and Search Strings}
+\input{chapters/protocol/searchterm}
+
 
 %TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
 %Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/sections/search_engines.tex
