changes in protocol

--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -11,14 +11,8 @@
 
 \begin{document}
 
+\input{chapters/protocol/searchengines}
+\input{chapters/protocol/finalprotocol}
 \input{chapters/protocol/searchterm}
-
-
-%TODO: Write about the different what kind of results the different search engines gave with differet search terms. (With and without graph database)
-%Ref: https://raw.githubusercontent.com/sandsmark/slr-scbw/master/sections/search_engines.tex
-
-\section{Protocol}
-%TODO: The final protocol with the final search term and justifications.
-%Ref: https://raw.githubusercontent.com/kenborge/slr-scbw/master/sections/protocol.tex
 
 \end{document}
