created a table for finalprotocol.tex

--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -8,12 +8,12 @@
 \usepackage{geometry} 							% Better geometry
 \usepackage{import}
 \usepackage{todonotes}
+\usepackage{tabularx}
 
 
 \begin{document}
 
 \input{chapters/protocol/searchengines}
 \input{chapters/protocol/finalprotocol}
-\input{chapters/protocol/searchterm}
 
 \end{document}
