added som stuff

--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -12,8 +12,9 @@
 
 
 \begin{document}
-
 \input{chapters/protocol/searchenginesvol2}
 \input{chapters/protocol/finalprotocol}
+\listoftables
+\bibliography{bibl}
 
 \end{document}
