--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,7 +1,7 @@
 @unpublished{kofod2014,
   author = "Kofod-Petersen, A.",
   title = "How to do a Structured Literature Review in computer science",
-  year = "2014",
-  month = "August",
-  note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR_HowTo.pdf}",
+  %year = "2014",
+  %month = "August",
+  note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR‰_HowTo.pdf}",
 }
