--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -2,7 +2,7 @@
 \usepackage[english]{babel}						% Correct English hyphenation
 \usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
-\usepackage{natbib}								% Correct citations
+\usepackage[square,sort,comma,numbers]{natbib}						% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
 \usepackage[linktocpage,colorlinks]{hyperref}			% PDF hyperlink
 \usepackage{geometry} 							% Better geometry
@@ -12,8 +12,8 @@
 
 
 \begin{document}
-\input{chapters/protocol/searchenginesvol2}
 \input{chapters/protocol/finalprotocol}
+\input{chapters/protocol/searchenginesvol2}
 \listoftables
 \bibliography{bibl}
 
