--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,7 +1,15 @@
 @unpublished{kofod2014,
-  author = "Kofod-Petersen, A.",
-  title = "How to do a Structured Literature Review in computer science",
-  %year = "2014",
-  %month = "August",
-  note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR‰_HowTo.pdf}",
+	author = "Kofod-Petersen, A.",
+    title = "How to do a Structured Literature Review in computer science",
+    %year = "2014",
+    %month = "August",
+    note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR‰_HowTo.pdf}",
+}
+
+@book{vehiclerouting,
+	author = "Ferrucci, F.",
+	title = "Pro-active Dynamic Vehicle Routing",
+	year = "2013",
+	publisher = "Springer Berlin Heidelberg",
+	address = "Berlin, Heidelberg"
 }
