--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -13,3 +13,12 @@
 	publisher = "Springer Berlin Heidelberg",
 	address = "Berlin, Heidelberg"
 }
+
+@misc{website:miljopakken,
+	author = "Miljøpakken",
+	title = "Miljøpakkens mål",
+	month = "November",
+	year = "2014",
+	url = "http://miljopakken.no/om-miljoepakken/maal"
+	
+}
