small changes to protocol.tex and bibl.bib

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,9 +1,9 @@
 @unpublished{kofod2014,
 	author = "Kofod-Petersen, A.",
     title = "How to do a Structured Literature Review in computer science",
-    %year = "2014",
-    %month = "August",
-    note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR‰_HowTo.pdf}",
+    year = "2014",
+    month = "August",
+    note = "\url{https://research.idi.ntnu.no/aimasters/files/SLR_HowTo.pdf}",
 }
 
 @book{vehiclerouting,
@@ -19,6 +19,5 @@
 	title = "Miljøpakkens mål",
 	month = "November",
 	year = "2014",
-	url = "http://miljopakken.no/om-miljoepakken/maal"
-	
+	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}"
 }
