--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -8,10 +8,12 @@
 \usepackage{geometry} 							% Better geometry
 \usepackage{import}
 \usepackage{todonotes}
+\usepackage{underscore}
 \usepackage{tabularx}
 
 
 \begin{document}
+\bibliographystyle{plain}
 \listoftables
 \input{chapters/protocol/finalprotocol}
 \input{chapters/protocol/searchenginesvol2}
