--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -10,6 +10,11 @@
 \usepackage{todonotes}
 \usepackage{underscore}
 \usepackage{tabularx}
+\hypersetup{
+ colorlinks=false,
+ citecolor=black,
+ linkcolor=black,
+ urlcolor=black}
 
 
 \begin{document}
