papers -> literature, wrote some stuff and added a table of final literature

--- a/thesis/protocol.tex
+++ b/thesis/protocol.tex
@@ -10,12 +10,14 @@
 \usepackage{todonotes}
 \usepackage{underscore}
 \usepackage{tabularx}
+\usepackage{mathtools}
+\usepackage{amsmath}
+\usepackage[section]{placeins}
 \hypersetup{
  colorlinks=false,
  citecolor=black,
  linkcolor=black,
  urlcolor=black}
-
 
 \begin{document}
 \listoftables
