Cleaned up a bit and added a draft to related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,20 @@
+@article{acs:tsp1,
+    author    = "Dorigo, M., L. M. Gabardella",
+    title     = "Ant colony system: A cooperative learning approach to the travelling salesman problem",
+    journal   = " IEEE Transaction on Evolutionary Computation 1(1)",
+    pages    = "53-66",
+    year      = "1997",
+
+}
+
+@article{swarmintelligence,
+    author    = "Beni, G., Wang, J.",
+    title     = "Swarm intelligence",
+    journal   = "Proceedings of the Seventh Annual Meeting of the Robotics Society of Japan",
+    pages    = "425–428",
+    year      = "1989",
+}
+
 @unpublished{kofod2014,
 	author = "Kofod-Petersen, A.",
     title = "How to do a Structured Literature Review in computer science",
