More related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,7 +1,16 @@
+@article{bs:tsp1,
+    author    = "Lucic and Teodorovic",
+    title     = "Computing with bees: Attacking complex transportation engineering problems",
+    journal   = "International Journal on Artificial Intelligence Tools",
+    pages    = "375-394",
+    year      = "2003",
+
+}
+
 @article{acs:tsp1,
     author    = "Dorigo and Gabardella",
     title     = "Ant colony system: A cooperative learning approach to the travelling salesman problem",
-    journal   = " IEEE Transaction on Evolutionary Computation 1(1)",
+    journal   = "IEEE Transaction on Evolutionary Computation 1(1)",
     pages    = "53-66",
     year      = "1997",
 
