More related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{ant-vehicleNavigation,
+    author    = "Salehi-nezhad and Farrahi-Moghaddam",
+    title     = "An Ant Based Algorithm Approach to Vehicle Navigation",
+    journal   = "First Joint Congress on Fuzzy and Intelligent Systems Ferdowsi University of Mashhad, Iran",
+    year      = "2007",
+
+}
+
 @article{bs:tsp1,
     author    = "Lucic and Teodorovic",
     title     = "Computing with bees: Attacking complex transportation engineering problems",
