--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,4 +1,20 @@
-@article{ant-vehicleNavigation,
+@article{jiang10,
+    author    = "Jiang and Qingsong and Huang",
+    title     = "An Improved Ant Colony Algorithm for Urban Transit Network Optimization",
+    journal   = "Sixth International Conference on Natural Computation",
+    year      = "2010",
+
+}
+
+@article{tripathi09,
+    author    = "Tripathi and Kuriger and Wan",
+    title     = "An Ant Based Simulation Optimization for Vehicle Routing Problem with Stochastic Demands",
+    journal   = "Winter Simulation Conference",
+    year      = "2009",
+
+}
+
+@article{salehi-nezhad07,
     author    = "Salehi-nezhad and Farrahi-Moghaddam",
     title     = "An Ant Based Algorithm Approach to Vehicle Navigation",
     journal   = "First Joint Congress on Fuzzy and Intelligent Systems Ferdowsi University of Mashhad, Iran",
@@ -6,7 +22,7 @@
 
 }
 
-@article{bs:tsp1,
+@article{lucic03,
     author    = "Lucic and Teodorovic",
     title     = "Computing with bees: Attacking complex transportation engineering problems",
     journal   = "International Journal on Artificial Intelligence Tools",
@@ -15,7 +31,7 @@
 
 }
 
-@article{acs:tsp1,
+@article{dorigo97,
     author    = "Dorigo and Gabardella",
     title     = "Ant colony system: A cooperative learning approach to the travelling salesman problem",
     journal   = "IEEE Transaction on Evolutionary Computation 1(1)",
@@ -24,7 +40,7 @@
 
 }
 
-@article{swarmintelligence,
+@article{beni89,
     author    = "Beni and Wang",
     title     = "Swarm intelligence",
     journal   = "Proceedings of the Seventh Annual Meeting of the Robotics Society of Japan",
