--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -77,11 +77,14 @@
 \chapter{Introduction}
 \input{chapters/introduction/introduction}
 \input{chapters/introduction/motivation}
+\section{Swarm intelligence}
+\section{Vehicle Routing Problem}
+\section{Related work}
+\input{chapters/relatedwork/relatedwork}
 \input{chapters/introduction/researchquestions}
 \input{chapters/introduction/reportoverview}
 
-\chapter{Related Work}
-\input{chapters/relatedwork/relatedwork}
+
 
 \chapter{The Model}
 \input{chapters/model/model}
