Continued to fix the structure, and writing on relatedwork

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,13 @@
+
+@article{dias14,
+    author    = "Dias and Machado and Silva and Abreu",
+    title     = "An Inverted Ant Colony Optimization approach to traffic",
+    journal   = "Engineering Applications of Artificial Intelligence 36",
+    pages    = "122-133",
+    year      = "2014",
+
+}
+
 @article{jiang10,
     author    = "Jiang and Qingsong and Huang",
     title     = "An Improved Ant Colony Algorithm for Urban Transit Network Optimization",
@@ -19,6 +29,14 @@
     title     = "An Ant Based Algorithm Approach to Vehicle Navigation",
     journal   = "First Joint Congress on Fuzzy and Intelligent Systems Ferdowsi University of Mashhad, Iran",
     year      = "2007",
+
+}
+
+@article{hsiao04,
+    author    = "Hsiao and Chuang and Chien",
+    title     = "Ant Colony Optimization for Best Path Planning",
+    journal   = "International Symposium on Communication and Information Techniques",
+    year      = "2004",
 
 }
 
