more related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{nikolic14,
+    author    = "Nikolic and Teodorovic",
+    title     = "A simultaneous transit network design and frequency settings: Computing with bees",
+    journal   = "Expert Systems with Applications 41",
+    pages    = "7200-7209",
+    year      = "2014",
+
+}
 
 @article{dias14,
     author    = "Dias and Machado and Silva and Abreu",
@@ -28,6 +36,15 @@
     author    = "Salehi-nezhad and Farrahi-Moghaddam",
     title     = "An Ant Based Algorithm Approach to Vehicle Navigation",
     journal   = "First Joint Congress on Fuzzy and Intelligent Systems Ferdowsi University of Mashhad, Iran",
+    year      = "2007",
+
+}
+
+@article{yang07,
+    author    = "Yang and Yu",
+    title     = "An Parallel Ant Colony Algorithm for Bus Network Optimization",
+    journal   = "Computer-Aided Civil and Infrastructure Engineering 22",
+    pages    = "44-55",
     year      = "2007",
 
 }
