--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{kechagiopoulos13,
+    author    = "Kechagiopoulos and Beligiannis",
+    title     = "Solving the Urban Transit Routing Problem using a particle swarm optimization based algorithm",
+    journal   = "Applied Soft Computing",
+    pages    = "1–2",
+    year      = "2013",
+}
+
 @article{nikolic14,
     author    = "Nikolic and Teodorovic",
     title     = "A simultaneous transit network design and frequency settings: Computing with bees",
@@ -106,3 +114,6 @@
 	year = "2014",
 	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}"
 }
+
+
+
