--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -115,5 +115,11 @@
 	howpublished = "\url{http://miljopakken.no/om-miljoepakken/maal}"
 }
 
-
+@misc{website:atb,
+    author = "AtB",
+    title = "AtB",
+    month = "January",
+    year = "2014",
+    howpublished = "\url{http://www.atb.no}"
+}
 
