added a new related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,8 +1,15 @@
+@article{salehinejad10,
+    author    = "Salehinejad and Talebi",
+    title     = "Dynamic Fuzzy Logic-Ant Colony System-Based Route Selection System",
+    journal   = "Applied Computational Intelligence and Soft Computing",
+    year      = "2010",
+}
+
 @article{kechagiopoulos13,
     author    = "Kechagiopoulos and Beligiannis",
     title     = "Solving the Urban Transit Routing Problem using a particle swarm optimization based algorithm",
     journal   = "Applied Soft Computing",
-    pages    = "1–2",
+    pages     = "1–2",
     year      = "2013",
 }
 
