more related work + bibl fixes

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{sedighpour14,
+    author    = "Sedighpour and Ahmadi and Yousefikhoshbakht and Didehvar and Rahmati",
+    title     = "Solving the open vehicle routing problem by a hybrid ant colony optimization",
+    journal   = "Kuwait J. Sci. 41",
+    pages     = "139-162",
+    year      = "2014",
+}
+
 @article{salehinejad10,
     author    = "Salehinejad and Talebi",
     title     = "Dynamic Fuzzy Logic-Ant Colony System-Based Route Selection System",
@@ -9,7 +17,7 @@
     author    = "Kechagiopoulos and Beligiannis",
     title     = "Solving the Urban Transit Routing Problem using a particle swarm optimization based algorithm",
     journal   = "Applied Soft Computing",
-    pages     = "1–2",
+    pages     = "654-676",
     year      = "2013",
 }
 
