new references to bibl + update on VRP

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,4 +1,20 @@
+@misc{website:neo,
+    author = "NEO",
+    title = "Vehicle Routing Problem",
+    month = "January",
+    year = "2013",
+    howpublished = "\url{http://neo.lcc.uma.es/vrp}"
+}
 
+
+@article{dantzig59,
+    author    = "Dantzig and Ramser",
+    title     = "The Truck Dispatching Problem",
+    journal   = "Management Science",
+    pages     = "80-91",
+    year      = "1959",
+
+}
 
 @article{sedighpour14,
     author    = "Sedighpour and Ahmadi and Yousefikhoshbakht and Didehvar and Rahmati",
