--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,27 @@
+@article{nanda11,
+    author    = "Nanda and Das",
+    title     = "Ant colony optimization: a computational intelligence technique",
+    journal   = "Int. J. Comput. Commun. Technol 2",
+    pages     = "105-110",
+    year      = "2011",
+}
+
+@article{dorigo96,
+    author    = "Dorigo and Maniezzo and Colorni",
+    title     = "The ant system: Optimization by a colony of cooperating agents",
+    journal   = "IEEE Transactions on Systems. Man and Cybernetics",
+    pages     = "1-13",
+    year      = "1996",
+}
+
+@article{deneubourg90,
+    author    = "Deneubourg and Aron and Goss and Pasteels",
+    title     = "The Self-Organizing Exploratory Pattern of the Argentine Ant",
+    journal   = "Journal of Insect Behavior",
+    pages     = "159-168",
+    year      = "1990",
+}
+
 @misc{website:neo,
     author = "NEO",
     title = "Vehicle Routing Problem",
