added an algorithm to aco

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -9,10 +9,10 @@
 \usepackage{geometry} 							% Better geometry
 \usepackage{import}
 \usepackage[toc,page]{appendix}
-%\usepackage{underscore}
 \usepackage{tabularx}
 \usepackage{mathtools}
-\usepackage{amsmath}
+%\usepackage{amsmath}
+\usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
 
 % B5 (uncomment to convert to B5 format)
