added references to bibl

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,18 @@
+@article{seeley92,
+    author    = "Seeley",
+    title     = "The tremble dance of the honey bee: message and meanings",
+    journal   = "Behavioral Ecology and Sociobiology",
+    pages     = "375-383",
+    year      = "1992",
+}
+
+@phdthesis{fan09,
+    author      = "Fan",
+    title       = "Metaheuristic Methods for the Urban Transit Routing Problem",
+    school      = "School of Computer Science Cardiff University",
+    year        = "2009",
+}
+
 @article{nanda11,
     author    = "Nanda and Das",
     title     = "Ant colony optimization: a computational intelligence technique",
