A shit load of stuff.

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -10,6 +10,7 @@
 \usepackage{import}
 \usepackage[toc,page]{appendix}
 \usepackage{tabularx}
+\usepackage[section]{placeins}
 \usepackage{mathtools}
 %\usepackage{amsmath}
 \usepackage[]{algorithm2e}
