Results to related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{poorzahedy11,
+    author    = "Poorzahedy and Safari",
+    title     = "An Ant System application to the Bus Network Design Problem: an algorithm and a case study",
+    journal   = "Int. J. Comput. Commun. Technol 2",
+    pages     = "105-110",
+    year      = "2011",
+}
+
 @phdthesis{fan09,
     author      = "Fan",
     title       = "Metaheuristic Methods for the Urban Transit Routing Problem",
