More results to related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,10 @@
+@article{stutzle99,
+    author    = "Stutzle and Hoos",
+    title     = "MAX-MIN ant system",
+    journal   = "Future Generation Computer System",
+    pages     = "237-255",
+    year      = "1999",
+}
 @article{poorzahedy11,
     author    = "Poorzahedy and Safari",
     title     = "An Ant System application to the Bus Network Design Problem: an algorithm and a case study",
