more related work

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,34 @@
+@article{bagloee11,
+    author    = "Bagloee and Ceder",
+    title     = "Transit-network design methodology for actual-size networks",
+    journal   = "Transportation Research Part B 45",
+    pages     = "1787-1804",
+    year      = "2011",
+}
+
+@article{shih94,
+    author    = "Shih and Mahmassani",
+    title     = "A design methodology for bus transit networks with coordinated operations",
+    journal   = "Research report SWUTC/94/60016-1, Center of Transportation Research, University of Texas at Austin",
+    year      = "1994",
+}
+
+@article{baaj95,
+    author    = "Baaj and Mahmassani",
+    title     = "Hybrid route generation heuristic algorithm for the design of transit networks",
+    journal   = "Transportation Research Part C 3",
+    pages     = "31-50",
+    year      = "1995",
+}
+
+@article{mandl80,
+    author    = "Mandl",
+    title     = "Evaluation and optimization of urban public transportation networks",
+    journal   = "European Journal of Operational Research",
+    pages     = "396–404",
+    year      = "1980",
+}
+
 @article{stutzle99,
     author    = "Stutzle and Hoos",
     title     = "MAX-MIN ant system",
@@ -5,6 +36,7 @@
     pages     = "237-255",
     year      = "1999",
 }
+
 @article{poorzahedy11,
     author    = "Poorzahedy and Safari",
     title     = "An Ant System application to the Bus Network Design Problem: an algorithm and a case study",
