RelatedWork and bibl

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,59 @@
+@article{chew12,
+    author    = "Chew and Lee",
+    title     = "A genetic algorithm for urban transit routing problem",
+    journal   = "Int J. Mod. Phys.: Conf. Ser. 09",
+    pages     = "411-421",
+    year      = "2012",
+}
+
+@article{zhang10,
+    author    = "Zhang and Lu and Fan",
+    title     = "The multi-objective optimization algorithm to a simple model of urban transit routing problem",
+    journal   = "Sixth International Conference on Natural Computation",
+    pages     = "2812-2815",
+    year      = "2010",
+}
+
+
+@article{fan09-2,
+    author    = "Fan and Mumford and Evans",
+    title     = "A simple multi-objective optimization algorithm for the urban transit routing problem",
+    journal   = "IEEE Congress on Evolutionary Computation",
+    pages     = "1-7",
+    year      = "2009",
+}
+
+@article{fan10,
+    author    = "Fan and Mumford",
+    title     = "A metaheuristic approach to the urban transit routing problem",
+    journal   = "J. Heuristics 16",
+    pages     = "353-372",
+    year      = "2010",
+}
+
+@phdthesis{kidwai98,
+    author    = "Kidwai",
+    title     = "Optimal Design of Bus Transit Network: A Genetic Algorithm Based Approach",
+    school    = "Indian Institute of Technology",
+    year      = "1998",
+}
+
+@article{chakroborty02,
+    author    = "Chakroborty and Wivedi",
+    title     = "Optimal Route Network Design for transit systems using genetic algorithms",
+    journal   = "Eng. Optimiz. 34",
+    pages     = "83-100",
+    year      = "2002",
+}
+
+@article{baaj91,
+    author    = "Baaj and Mahmassani",
+    title     = "An AI-based approach for transit route system planning and design",
+    journal   = "J. Adv. Transp. 25",
+    pages     = "187-209",
+    year      = "1991",
+}
+
 @article{bagloee11,
     author    = "Bagloee and Ceder",
     title     = "Transit-network design methodology for actual-size networks",
