--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -81,6 +81,7 @@
 \tableofcontents
 
 \chapter{Introduction}
+\label{introduction}
 \input{chapters/introduction/introduction}
 \input{chapters/introduction/backgroundAndMotivation}
 \input{chapters/introduction/goalsAndResearchQuestions}
@@ -88,21 +89,25 @@
 \input{chapters/introduction/thesisOverview}
 
 \chapter{Background and Motivation}
+\label{backgroundAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/vehicleRoutingProblem}
 \input{chapters/backgroundTheoryAndMotivation/swarmIntelligence}
 \input{chapters/backgroundTheoryAndMotivation/motivation}
 
 \chapter{The Model}
+\label{theModel}
 \input{chapters/model/model}
 
 \chapter{Experiments and Results}
+\label{experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentsAndResults}
 \input{chapters/experimentsAndResults/experimentalPlan}
 \input{chapters/experimentsAndResults/experimentalSetup}
 \input{chapters/experimentsAndResults/experimentalResults}
 
 \chapter{Evaluation and Conclusion}
+\label{evaluationAndConclusion}
 \input{chapters/evaluationAndConclusion/evaluation}
 \input{chapters/evaluationAndConclusion/discussion}
 \input{chapters/evaluationAndConclusion/contributions}
