--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -1,4 +1,5 @@
 \chapter{Protocol}
+\label{appendixA}
 
 %TODO: The final protocol with the final search term and justifications.
 %Ref: https://raw.githubusercontent.com/kenborge/slr-scbw/master/sections/protocol.tex
