--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,9 @@
+@phdthesis{zhao03,
+    author      = "Zhao and Gan",
+    title       = "Optimization of transit network to minimize transfers",
+    school      = "Lehman Center for Transportation Research",
+    year        = "2003",
+}
 @article{chew12,
     author    = "Chew and Lee",
     title     = "A genetic algorithm for urban transit routing problem",
