--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{shi99,
+    author    = "Shi and Eberhart",
+    title     = "Empirical Study of Particle Swarm Optimization",
+    journal   = "Evolutionary Computation vol. 3",
+    pages     = "1946-1950",
+    year      = "1999",
+}
+
 @phdthesis{zhao03,
     author      = "Zhao and Gan",
     title       = "Optimization of transit network to minimize transfers",
