added mandl as reference, and changed a lot of references to mandl instead of various papers.

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,12 @@
+@book{mandl79,
+    author    = "Christoph Mandl",
+    title     = "Applied Network Optimization",
+    year      = "1979",
+    publisher = "Academic Press",
+    address   = "Stumpergasse 56, 1060 Wien, Austria"
+}
+
+
 @article{shi99,
     author    = "Shi and Eberhart",
     title     = "Empirical Study of Particle Swarm Optimization",
