--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,10 @@
+@article{wan09,
+    author    = "Wan and Nolle",
+    title     = "SOLVING A MULTI-DIMENSIONAL KNAPSACK PROBLEM USING A HYBRID PARTICLE SWARM OPTIMIZATION ALGORITHM",
+    journal   = "Conference: 23rd European Conference on Modelling and Simulation", 
+    year      = "2009",
+}
+
 @book{mandl79,
     author    = "Christoph Mandl",
     title     = "Applied Network Optimization",
