added neo4j to motivation and problem statement

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -319,4 +319,11 @@
     year = "2014",
     howpublished = "\url{http://www.atb.no}"
 }
+@misc{website:neo4j,
+    author = "Neo Technology, Inc.",
+    title = "Neo4j",
+    month = "February",
+    year = "2015",
+    howpublished = "\url{http://www.neo4j.com}"
+}
 
