--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@book{neo13,
+    author    = "Robinson and Webber and Eifrem",
+    title     = "Graph Databases",
+    year      = "2013",
+    publisher = "O’Reilly Media, Inc.",
+    address   = "1005 Gravenstein Highway North, Sebastopol, CA 95472"
+}
+
 @article{wan09,
     author    = "Wan and Nolle",
     title     = "SOLVING A MULTI-DIMENSIONAL KNAPSACK PROBLEM USING A HYBRID PARTICLE SWARM OPTIMIZATION ALGORITHM",
