--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -1,5 +1,5 @@
 % (C) Anders Kofod-Petersen
-\documentclass[11pt, a4paper]{report}
+\documentclass[11pt, b5paper]{report}
 \usepackage[english]{babel}						% Correct English hyphenation
 \usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
@@ -93,6 +93,7 @@
 \input{chapters/backgroundTheoryAndMotivation/backgroundTheoryAndMotivation}
 \input{chapters/backgroundTheoryAndMotivation/vehicleRoutingProblem}
 \input{chapters/backgroundTheoryAndMotivation/swarmIntelligence}
+\input{chapters/backgroundTheoryAndMotivation/neo4j}
 \input{chapters/backgroundTheoryAndMotivation/motivation}
 
 \chapter{The Model}
