--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,4 +1,20 @@
-@book{neo13,
+@article{euler1741,
+    author    = "Euler",
+    title     = "Solutio Problematis ad Geometriam Situs Pertinentis",
+    journal   = "Commentarii Academiae Scientiarum Imperialis Petropolitanae 8",
+    pages     = "128-140",
+    year      = "1741",
+}
+
+@article{alexanderson06,
+    author    = "Alexanderson",
+    title     = "ABOUT THE COVER: EULER AND KÖNIGSBERG’S BRIDGES: A HISTORICAL VIEW",
+    journal   = "BULLETIN (New Series) OF THE AMERICAN MATHEMATICAL SOCIETY vol. 47",
+    pages     = "567–573",
+    year      = "2006",
+}
+
+@book{robinson13,
     author    = "Robinson and Webber and Eifrem",
     title     = "Graph Databases",
     year      = "2013",
