--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -15,6 +15,7 @@
 %\usepackage{amsmath}
 \usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
+\usepackage{float}
 
 % B5 (uncomment to convert to B5 format)
 %\geometry{b5paper}
