resized all tables inn appendices

--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -5,10 +5,10 @@
 %Ref: https://raw.githubusercontent.com/kenborge/slr-scbw/master/sections/protocol.tex
 \noindent
 \begin{table}[h]
-\begin{center}
-	{
-	\small
-    \hspace*{-2.25cm}\begin{tabular}[c]{| m{1.25cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} |}
+\resizebox{12.5cm}{!} {
+
+    \hspace*{-2.25cm}
+    \begin{tabular}[c]{| m{1.25cm} | m{1.5cm} | m{1.8cm} | m{1.5cm} | m{1.5cm} | m{1.5cm} | m{1.3cm} | m{1.5cm} | m{1.5cm} |}
     \hline
     & \textbf{Group 1} & \textbf{Group 2} & \textbf{Group 3} & \textbf{Group 4} & \textbf{Group 5} & \textbf{Group 6} & \textbf{Group 7} & \textbf{Group 8} \\ \hline   
     \textbf{Term1} & Train & Path optimization & Bee colony optimization & Transit & Artificial intelligence & Multi agent & Routing & Neo4j \\ \hline
@@ -19,12 +19,10 @@
     \textbf{Term6} & & & PSO & & & & & \\ \hline
     \textbf{Term7} & & & ACO & & & & & \\ \hline
     \end{tabular}\hspace*{-2.25cm}
+    
     }
-\end{center}
-
-\caption{Matrix of search terms}
-\label{table:searchterms}
-
+    \caption{Matrix of search terms}
+    \label{table:searchterms}
 \end{table}
 
 \section{Search Terms}
@@ -121,6 +119,7 @@ Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (par
     {
     \tiny
     \hspace*{-2cm}
+    \resizebox{16.5cm}{!} {
     \begin{tabular}[c]{|m{6.5cm}|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
         \hline
         \textbf{Title} & \textbf{1a} & \textbf{1b} & \textbf{2} & \textbf{3} & \textbf{4} & \textbf{5} & \textbf{6} & \textbf{7} & \textbf{8} & \textbf{9} & \textbf{10} & \textbf{11} & \textbf{12} & \textbf{13} & \textbf{Total} \\ \hline
@@ -169,6 +168,7 @@ Point 1-13 was given a score, with the granularity of 0 (no), $\frac{1}{2}$ (par
 
     \end{tabular}
     } 
+    }
 \caption{Quality Criteria Scoring}\label{table:literature}
 \end{table}\hspace*{-2cm}
 
@@ -179,7 +179,7 @@ When selecting the final literature we decided to do this solely based on the qu
     {
     \begin{center}
     \small
-    \begin{tabular}[c]{| m{7cm} | m{7cm} |}
+    \begin{tabular}[c]{| m{6cm} | m{6cm} |}
         \hline
         \textbf{Title} & \textbf{Author} \\ \hline
         \textit{``An ant based algorithm approach to vehicle navigation''} & Salehi-nezhad and Farrahi-Moghaddam \\ \hline
