--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -1,12 +1,15 @@
 % (C) Anders Kofod-Petersen
-\documentclass[11pt, b5paper]{report}
+
+\documentclass[b5paper, twoside, titlepage, 10pt]{report}
+\usepackage[lmargin=25mm,rmargin=25mm,tmargin=27mm,bmargin=30mm]{geometry}
+%\documentclass[11pt, b5paper]{report}
 \usepackage[english]{babel}						% Correct English hyphenation
 \usepackage[utf8]{inputenc}						% Allow for non-English letters
 \usepackage{graphicx}							% To include graphics
 \usepackage{natbib}								% Correct citations
 %\usepackage{fancyheadings}						% Nice header and footer
 \usepackage[linktocpage,colorlinks]{hyperref}			% PDF hyperlink
-\usepackage{geometry} 							% Better geometry
+%\usepackage{geometry} 							% Better geometry
 \usepackage{import}
 \usepackage[toc,page]{appendix}
 \usepackage{tabularx}
