added square brackets and fixed anders' comments

--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -19,6 +19,7 @@
 \usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
 \usepackage{float}
+\setcitestyle{square}
 
 % B5 (uncomment to convert to B5 format)
 %\geometry{b5paper}
