removed references to fan09 added mumford13

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,12 @@
+@unpublished{mumford13,
+    author  = "Christine L Mumford",
+    title   = "Supplementary Material for: New Heuristic and Evolutionary Operators for the Multi-Objective Urban Transit Routing Problem, CEC 2013",
+    school = "School of Computer Science & Informatics, Cardiff University",
+    year   = "2013",
+    month  = "March",
+    note    = "\url{http://users.cs.cf.ac.uk/C.L.Mumford/Research%20Topics/UTRP/Outline.html}",
+}
+
 @article{euler1741,
     author    = "Euler",
     title     = "Solutio Problematis ad Geometriam Situs Pertinentis",
